RESOLVED FIXED120418
[Qt][WK1] PageVisibility tests are flaky
https://bugs.webkit.org/show_bug.cgi?id=120418
Summary [Qt][WK1] PageVisibility tests are flaky
Allan Sandfeld Jensen
Reported 2013-08-28 07:24:49 PDT
The missing implementation of resetPageVisibility() are causing the page-visibility tests to be flaky.
Attachments
Patch (3.80 KB, patch)
2013-08-28 07:27 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2013-08-28 07:27:23 PDT
Benjamin Dupont
Comment 2 2013-08-28 08:27:47 PDT
LGTM
Allan Sandfeld Jensen
Comment 3 2013-09-03 01:53:25 PDT
Comment on attachment 209885 [details] Patch Clearing flags on attachment: 209885 Committed r154974: <http://trac.webkit.org/changeset/154974>
Allan Sandfeld Jensen
Comment 4 2013-09-03 01:53:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.