[Qt][WK1] PageVisibility tests are flaky https://bugs.webkit.org/show_bug.cgi?id=120418

Reviewed by Jocelyn Turcotte.

Source/WebKit/qt:

* WebCoreSupport/DumpRenderTreeSupportQt.cpp:
(DumpRenderTreeSupportQt::resetPageVisibility):
* WebCoreSupport/DumpRenderTreeSupportQt.h:

Tools:

Implement resetPageVisibility so we can reset visibility without
emiting visibility state change events.

* DumpRenderTree/qt/TestRunnerQt.cpp:
(TestRunner::resetPageVisibility):

Canonical link: https://commits.webkit.org/138599@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154974 268f45cc-cd09-0410-ab3c-d52691b4dbfc